syntax = "proto3";

package game_cmd;

enum GameCmd
{
	CMD_BASE                          = 0;
	

	//登录模块----------------------------------------------------------------------------------------------------------------------------------------
    LOGIN_CMD_MIN                     = 10000;         // 消息分类临界
    LOGIN                             = 10001;         // logic.Login 客户端登录
    LOGIN_RESP                        = 10002;         // logic.LoginResp 登录返回   
    CHECK_NAME                        = 10003;         // logic.CheckName 检查名字能否注册
    CHECK_NAME_RESP                   = 10004;         // null 没有消息体，检查消息头error_code，0是成功，否则是GameError枚举 
    CREATE_PLAYER                     = 10005;         // logic.CreatePlayer 创建角色
    CREATE_PLAYER_RESP                = 10006;     	 // null 没有消息体，检查消息头error_code，0是成功，否则是GameError枚举 
    OFF_LINE                          = 10008;         // null 玩家离线，服务器用，客户端直接关闭网络连接触发	
	REGISTER                          = 10010;        // 注册
	REGISTER_RESP                     = 10011;         // 注册返回
	LOGIN_TEST                        = 10017;       // 协议测试
    LOGIN_CMD_MAX                     = 10099;         // 消息分类临界
    //-----------------------------------------------------------------------------------------------------------------------------------------------

  
	//玩家整体模块------------------------------------------------------------------------------------------------------------------------------------
    PLAYER_CMD_MIN                    = 11100;         // 消息分类临界
    PLAYER_CMD_MAX                    = 11299;         // 消息分类临界
    //-----------------------------------------------------------------------------------------------------------------------------------------------

	
	//道具管理系统-----------------------------------------------------------------------------------------------------------------------
    ITEM_CMD_MIN                      = 11300;
    ITEM_CMD_MAX                      = 11399;
    //-----------------------------------------------------------------------------------------------------------------------------------------------

	
	//好友，聊天系统--------------------------------------------------------------------------------------------------------------------------------
    SOCIAL_CMD_MIN                    = 11900;
    SOCIAL_CMD_MAX                    = 11999;
	//----------------------------------------------------------------------------------------------------------------------------------------------------
    
	//任务系统-----------------------------------------------------------------------------------------------------------
    MISSION_CMD_MIN                   = 12800;
    MISSION_CMD_MAX                   = 12899;
    //------------------------------------------------------------------------------------------------------------------
	
	
	//---房间模块
	ASK_CREATE_ROOM                   = 20000;         //请求房间列表
	ASK_CREATE_ROOM_RESP              = 20001;         //放回
	ASK_ADD_ROOM                      = 20002;         //加入房间
	ASK_ADD_ROOM_RESP                 = 20003; 
	ASK_LEAVE_ROOM                    = 20004 ;        //离开房间
	ASK_READY_ROOM                    = 20005 ;        //准备
	ASK_READY_ROOM_RESP               = 20006;
	ASK_CANCEL_ROOM                   = 20007 ;        //取消
	ASK_START_ROOM                    = 20008 ;        //开始游戏
	ASK_REENTER_ROOM                  = 20009 ;        //重进房间
	START_BATTLE_RESP                 = 20010;
	ASK_UPDATE_USER_DATA              = 20011;
	UPDATE_USERS_DATA_RESP            = 20012; 
	ROOM_MAX                          = 20200;
}



////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
